src/App.css
/* ... */
.playlist--song:hover {
	color: #fff;
	background-color: rgba(0,0,0,0.2);
}
.playlist--song:hover span {
	color: #fff;
}
.playlist--song_info {
	display: grid;
	grid-template-columns: 40px auto;
	column-gap: 10px;
}
.playlist--song_img {
	width: 40px;
	grid-row-start: 1;
    grid-row-end: 3;
	border-radius: 5px;
	cursor: pointer;
}
.playlist--song_title {
	font-weight: 600;
}
.playlist--song_singer {
	font-size: 0.8rem;
	color: rgb(83, 83, 83);
}
.playlist--song_album {
	display: flex;
	align-items: center;
	color: rgb(83, 83, 83);
}

.playlist--header {
	display: grid;
	row-gap: 15px;
	/* justify-content: space-between;
	align-items: center;
	padding: 10px 0; */
	border-bottom: 1px solid rgba(240,240,240,0.2);
	padding-top: 10px;
	padding-bottom: 10px;
}
.playlist--header_title h1 {
	text-shadow: 2px 2px 8px #fff;
	text-align: center;
	color: #494155;

	/* background: -webkit-linear-gradient(#8a5f68, #997dc5);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent; */
}
.playlist--header_actions {
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.playlist--header button {
	width: 80px;
	padding: 5px;
	outline: none;
	color: #fff;
	border-radius: 5px;
	border: none;
	cursor: pointer;
	font-weight: bold;
	text-shadow: 2px 2px 10px #fff;
	box-shadow: 1px 0px 10px 10px rgba(240,240,240,0.2);
	background: linear-gradient(to right, #8a5f68, #997dc5);
}
.playlist--header button:active {
	box-shadow: 0px 2px 2px rgba(245,245,245,0.5);
}
.playlist--header button span:first-child {
	margin-right: 5px;
}

.playlist--body {
	height: 80%;
    overflow: auto;
}

/* large screen display */
@media only screen and (min-width: 769px) {
	.right button:hover {
		background: #FF8A65;
	}
	.left .volume span:hover {
		background: rgba(245,245,245,0.1);
	}
}

/* Mobile display */
@media only screen and (max-width: 768px) {
	main {
		height: auto;
	}
	.playlist {
		width: 100%;
		padding: 10px;
	}
	.playlist--header h1 {
		font-size: 1.2rem;
	}

	/* player on mobile devices */
	.player {
		height: 100vh;
		display: flex;
		flex-direction: column;
	}
	.player #logo {
		left: 10px;
	}
	.player #logo span {
		margin-right: 10px;
	}
	/* left & right part */
	.right, .left {
		height: 100%;
		width: 80%;
	}

	.right input[type=range]{
		width: 60%;
	}

	/* volume part */
	.left .volume {
		bottom: 0;
	}

	/* right part */
	.right .middle {
		width: 80%;
		background-color: #2a2a2a;
		padding: 5px;
	}
	.right .duration {
		bottom: 42%;
	}
	.right .show_song_no {
		position: absolute;
		top: -97%;
		right: -9%;
	}
	.right #title {
		font-size: 30px;
		margin-bottom: 10px;
	}
	.right #artist {
		font-size: 15px;
	}
	.right button:active {
		background: #FF8A65;
	}

	/* visualiser */
	.visualizer-box {
		left: 50%;
		top: 45%;
		transform: translate(-60%, -41.5%);
	}


	/* modal */
	#modal-container .modal-background .modal {
		width: 95% !important;
	}
} 



/* modal */
html, body {
	min-height: 100%;
	height: 100%;
}
html.modal-active, body.modal-active {
	overflow: hidden;
}
#modal-container {
	position: fixed;
	display: table;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	transform: scale(0);
	z-index: 1;
}
#modal-container.fast {
	transform: scale(1);
}
#modal-container.fast .modal-background {
	background: rgba(0, 0, 0, .0);
	animation: fadeIn 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}
#modal-container.fast .modal-background .modal {
	transform: translateX(-1500px);
	animation: roadRunnerIn 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}
#modal-container.fast.out {
	animation: quickScaleDown 0s 0.5s linear forwards;
}
#modal-container.fast.out .modal-background {
	animation: fadeOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}
#modal-container.fast.out .modal-background .modal {
	animation: roadRunnerOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}
#modal-container .modal-background {
	display: table-cell;
	background: rgba(0, 0, 0, .8);
	text-align: center;
	vertical-align: middle;
}
#modal-container .modal-background .modal {
	background: white;
	width: 400px;
	height: 500px;
	padding: 10px;
	border-radius: 3px;
	font-weight: 300;
	position: relative;
	display: inline-block;
}
.modal--wrapper{
	height: 100%;
	display: grid;
	grid-template-rows: 5% 80% 15%;
}
.modal--header {	
	display: flex;
    justify-content: space-between;
	align-items: center;
}
.modal--header div {
	width: 100%;
}
.modal--header h3 {
	font-size: 1rem;
	color: #5d6d7e;
	text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
}
.modal--header .modal--header_close {
	cursor: pointer;
	color: #5d6d7e;
}
.modal--body {
	/* overflow: auto; */
}
.modal--body_playlist {
	height: 50px;
	width: 100%;
	padding: 10px;
	border-bottom: 1px solid rgba(0,0,0,0.2);
	display: flex;
	align-items: center;
	justify-content: center;
	cursor: pointer;
}
.modal--body_playlist:hover {
	background-color: #5d6d7e;
	color: #fff;
}
.modal--body_playlist span {
	font-size: 0.9rem;
}
.modal--body_songs-container {
	display: flex;
	align-items: center;
	flex-direction: column;
	justify-content: center;
	height: 100%;
	overflow: auto;
	padding-top: 240px;
	color: #494155;
}
.modal--body_playlist-container {
	display: flex;
	align-items: center;
	flex-direction: column;
	justify-content: center;
	height: 100%;
	overflow: auto;
	padding-top: 80px;
	font-weight: bold;
	color: #5d6d7e;
}
.modal--body_form-container {
	display: flex;
	align-items: center;
	flex-direction: column;
	justify-content: center;
	height: 100%;
}
.modal--body_form-container > div {
	width: 100%;
	text-align: left;
	margin-bottom: 10px;
}
.modal--body_form-container > form {
	width: 100%;
	display: grid;
	grid-template-columns: 80% 20%;
} 
.modal--body_form-container input[type="text"]{
	padding: 10px;
	outline: none;
	border: 1px solid #5d6d7e;
	font-size: 1rem;
	margin-right: 10px;
	color: #5d6d7e;
}
/* ... */

